--- a/operations.html
+++ b/operations.html
@@ -16,6 +16,9 @@ function operaciones(op)
 
         restar: function restarNumeros(n1, n2) {
             return (parseInt(n1) - parseInt(n2));
+        },
+		multiplicar: function multiplicarNumeros(n1, n2) {
+            return (parseInt(n1) * parseInt(n2));
         }
 
 
@@ -48,6 +51,10 @@ function operaciones(op)
                 var resultado = ops.restar(num1, num2);
                 alert (resultado);
                 break;
+			case 'multiplicar':
+                var resultado = ops.multiplicar(num1, num2);
+                alert(resultado);
+                break;
 
         }
     }
@@ -67,6 +74,7 @@ function operaciones(op)
     <br><br>
     <input value="SUMAR" onclick="operaciones('sumar'); return false;" type="button"><br>
     <input value="RESTAR" onclick="operaciones('restar'); return false;" type="button"><br>
+	<input value="MULTIPLICAR" onclick="operaciones('multiplicar'); return false;" type="button"><br>
 
 
 </form>
